--- a/src/app/rodape/rodape.component.html
+++ b/src/app/rodape/rodape.component.html
@@ -1,1 +1,37 @@
-<p>rodape works!</p>
+<footer class="page-footer font-small bg-secondary pt-4">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12 d-flex justify-content-center">
+            <h4 class="text-white">Siga-nos nas redes sociais</h4>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-12 d-flex justify-content-center">
+            <ul class="social-network">
+                <li>
+                <a href="https://www.facebook.com/turmadamonica" target="_blank" class="iconeFace">
+                <i class="fa fa-facebook-square" aria-hidden="true"></i>
+                </a>
+                </li>
+                
+                <li>
+                <a href="https://www.instagram.com/turmadamonica/" target="_blank" class="iconeInsta">
+                <i class="fa fa-instagram" aria-hidden="true"></i>
+                </a>
+                </li>
+                    
+                <li>
+                <a href="https://br.linkedin.com/company/mauriciodesousaproducoes" target="_blank" 
+                class="iconeLink">
+                <i class="fa fa-linkedin-square" aria-hidden="true"></i>
+                </a>
+                </li>
+            </ul>
+            </div>
+        </div>
+    </div>
+    <div class="footer-copyright bg-dark text-center py-3">
+        <span class="text-light">Copyright ©) 2000: </span>
+        <a class="text-light" target="_blank" href="https://www.lojinhadamonica.com.br/">www.lojinhadamonica.com.br</a>
+    </div>
+</footer>
